fix discarded dice box sizing bug on smaller screens.

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ ul{
   justify-content: left;
   padding: 7px;
   border: solid rgb(234, 196, 53);
+  
 }
 
 
@@ -155,7 +156,8 @@ button{
   color: rgb(234, 196, 53);
   border: solid rgb(234, 196, 53);
   font-size: x-small;
-  padding: 30px;
+  padding: 3px;
+
 }
 
 
@@ -164,9 +166,11 @@ button{
   margin: 0 auto ;
   margin-top:4px;
   max-width: fit-content;
+  max-height: fit-content;
   padding: 3px;
   color:rgb(77, 161, 103);
   border: rgb(77, 161, 103) solid 2px;
+  font-size: 2vh;
 }
 
 
@@ -192,13 +196,19 @@ button:active{
 }     
 
 
-@media only screen and (min-width: 768px){
+@media only screen and (max-width: 768px){
 
   button:hover{
     cursor: pointer;
     color: rgb(234, 196, 53);
     background: rgb(77, 161, 103);
     border: rgb(234, 196, 53) solid 3px;
+  }
+
+  .discarded-dice-title{
+    min-width: fit-content;
+    min-height: fit-content;
+    font-size: 1vh;
   }
 
 }
